k8s/traefik-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress-route
spec:
  entryPoints:
  - web
  routes:
  # NOTE: Use IP address of Traefik load balancer
  - match: Host(`scale-streamlit-app.192.168.50.162.nip.io`) # Use *.nip.io DNS wildcard to route traffic
    kind: Rule
    services:
    - name: sticky-session-traefik-service
      kind: TraefikService
